[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/rooms/layouts/LayoutBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/rooms/Door.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/objects/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/enemies/SmallDrone.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/rooms/layouts/level2/Normal/DroneBay.gd" type="Script" id=5]

[node name="DroneBay" instance=ExtResource( 1 )]
script = ExtResource( 5 )

[node name="TileMap" parent="." index="0"]
tile_data = PoolIntArray( -458768, 26, 0, -458767, 26, 0, -458766, 26, 0, -458765, 26, 0, -458764, 26, 0, -458763, 26, 0, -458762, 26, 0, -458761, 26, 0, -458760, 26, 0, -458759, 26, 0, -458758, 26, 0, -458757, 26, 0, -458756, 26, 0, -458755, 26, 0, -458754, 26, 0, -458753, 26, 0, -524288, 26, 0, -524287, 26, 0, -524286, 26, 0, -524285, 26, 0, -524284, 26, 0, -524283, 26, 0, -524282, 26, 0, -524281, 26, 0, -524280, 26, 0, -524279, 26, 0, -524278, 26, 0, -524277, 26, 0, -524276, 26, 0, -524275, 26, 0, -524274, 26, 0, -524273, 26, 0, -393232, 26, 0, -393231, 26, 0, -393230, 26, 0, -393229, 26, 0, -393228, 26, 0, -393227, 26, 0, -393226, 26, 0, -393225, 26, 0, -393224, 26, 0, -393223, 26, 0, -393222, 26, 0, -393221, 26, 0, -393220, 26, 0, -393219, 26, 0, -393218, 26, 0, -393217, 26, 0, -458752, 26, 0, -458751, 26, 0, -458750, 26, 0, -458749, 26, 0, -458748, 26, 0, -458747, 26, 0, -458746, 26, 0, -458745, 26, 0, -458744, 26, 0, -458743, 26, 0, -458742, 26, 0, -458741, 26, 0, -458740, 26, 0, -458739, 26, 0, -458738, 26, 0, -458737, 26, 0, -327696, 26, 0, -327695, 26, 0, -327694, 26, 0, -327693, 26, 0, -327692, 26, 0, -327691, 26, 0, -327690, 26, 0, -327689, 26, 0, -327688, 26, 0, -327687, 26, 0, -327686, 26, 0, -327685, 26, 0, -327684, 26, 0, -327683, 26, 0, -327682, 26, 0, -327681, 26, 0, -393216, 26, 0, -393215, 26, 0, -393214, 26, 0, -393213, 26, 0, -393212, 26, 0, -393211, 26, 0, -393210, 26, 0, -393209, 26, 0, -393208, 26, 0, -393207, 26, 0, -393206, 26, 0, -393205, 26, 0, -393204, 26, 0, -393203, 26, 0, -393202, 26, 0, -393201, 26, 0, -262160, 26, 0, -262159, 26, 0, -262158, 26, 0, -262157, 26, 0, -262156, 26, 0, -262155, 26, 0, -262154, 26, 0, -262153, 26, 0, -262152, 26, 0, -262151, 26, 0, -262150, 26, 0, -262149, 26, 0, -262148, 26, 0, -262147, 26, 0, -262146, 26, 0, -262145, 26, 0, -327680, 26, 0, -327679, 26, 0, -327678, 26, 0, -327677, 26, 0, -327676, 26, 0, -327675, 26, 0, -327674, 26, 0, -327673, 26, 0, -327672, 26, 0, -327671, 26, 0, -327670, 26, 0, -327669, 26, 0, -327668, 26, 0, -327667, 26, 0, -327666, 26, 0, -327665, 26, 0, -196624, 26, 0, -196623, 26, 0, -196622, 26, 0, -196621, 26, 0, -196620, 26, 0, -196619, 26, 0, -196618, 26, 0, -196617, 26, 0, -196616, 26, 0, -196615, 26, 0, -196614, 26, 0, -196613, 26, 0, -196612, 26, 0, -196611, 26, 0, -196610, 26, 0, -196609, 26, 0, -262144, 26, 0, -262143, 26, 0, -262142, 26, 0, -262141, 26, 0, -262140, 26, 0, -262139, 26, 0, -262138, 26, 0, -262137, 26, 0, -262136, 26, 0, -262135, 26, 0, -262134, 26, 0, -262133, 26, 0, -262132, 26, 0, -262131, 26, 0, -262130, 26, 0, -262129, 26, 0, -131088, 26, 0, -131087, 26, 0, -131086, 26, 0, -131085, 26, 0, -131084, 26, 0, -131083, 26, 0, -131082, 26, 0, -131081, 26, 0, -131080, 26, 0, -131079, 26, 0, -131078, 26, 0, -131077, 26, 0, -131076, 26, 0, -131075, 26, 0, -131074, 26, 0, -131073, 26, 0, -196608, 26, 0, -196607, 26, 0, -196606, 26, 0, -196605, 26, 0, -196604, 26, 0, -196603, 26, 0, -196602, 26, 0, -196601, 26, 0, -196600, 26, 0, -196599, 26, 0, -196598, 26, 0, -196597, 26, 0, -196596, 26, 0, -196595, 26, 0, -196594, 26, 0, -196593, 26, 0, -65552, 26, 0, -65551, 26, 0, -65550, 26, 0, -65549, 26, 0, -65548, 26, 0, -65547, 26, 0, -65546, 26, 0, -65545, 26, 0, -65544, 26, 0, -65543, 26, 0, -65542, 26, 0, -65541, 26, 0, -65540, 26, 0, -65539, 26, 0, -65538, 26, 0, -65537, 26, 0, -131072, 26, 0, -131071, 26, 0, -131070, 26, 0, -131069, 26, 0, -131068, 26, 0, -131067, 26, 0, -131066, 26, 0, -131065, 26, 0, -131064, 26, 0, -131063, 26, 0, -131062, 26, 0, -131061, 26, 0, -131060, 26, 0, -131059, 26, 0, -131058, 26, 0, -131057, 26, 0, -16, 26, 0, -15, 26, 0, -14, 26, 0, -13, 26, 0, -12, 26, 0, -11, 26, 0, -10, 26, 0, -9, 26, 0, -8, 26, 0, -7, 26, 0, -6, 26, 0, -5, 26, 0, -4, 26, 0, -3, 26, 0, -2, 26, 0, -1, 26, 0, -65536, 26, 0, -65535, 26, 0, -65534, 26, 0, -65533, 26, 0, -65532, 26, 0, -65531, 26, 0, -65530, 26, 0, -65529, 26, 0, -65528, 26, 0, -65527, 26, 0, -65526, 26, 0, -65525, 26, 0, -65524, 26, 0, -65523, 26, 0, -65522, 26, 0, -65521, 26, 0, 65520, 26, 0, 65521, 26, 0, 65522, 26, 0, 65523, 26, 0, 65524, 26, 0, 65525, 26, 0, 65526, 26, 0, 65527, 26, 0, 65528, 26, 0, 65529, 26, 0, 65530, 26, 0, 65531, 26, 0, 65532, 26, 0, 65533, 26, 0, 65534, 26, 0, 65535, 26, 0, 0, 26, 0, 1, 26, 0, 2, 26, 0, 3, 26, 0, 4, 26, 0, 5, 26, 0, 6, 26, 0, 7, 26, 0, 8, 26, 0, 9, 26, 0, 10, 26, 0, 11, 26, 0, 12, 26, 0, 13, 26, 0, 14, 26, 0, 15, 26, 0, 131056, 26, 0, 131057, 26, 0, 131058, 26, 0, 131059, 26, 0, 131060, 26, 0, 131061, 26, 0, 131062, 26, 0, 131063, 26, 0, 131064, 26, 0, 131065, 26, 0, 131066, 26, 0, 131067, 26, 0, 131068, 26, 0, 131069, 26, 0, 131070, 26, 0, 131071, 26, 0, 65536, 26, 0, 65537, 26, 0, 65538, 26, 0, 65539, 26, 0, 65540, 26, 0, 65541, 26, 0, 65542, 26, 0, 65543, 26, 0, 65544, 26, 0, 65545, 26, 0, 65546, 26, 0, 65547, 26, 0, 65548, 26, 0, 65549, 26, 0, 65550, 26, 0, 65551, 26, 0, 196592, 26, 0, 196593, 26, 0, 196594, 26, 0, 196595, 26, 0, 196596, 26, 0, 196597, 26, 0, 196598, 26, 0, 196599, 26, 0, 196600, 26, 0, 196601, 26, 0, 196602, 26, 0, 196603, 26, 0, 196604, 26, 0, 196605, 26, 0, 196606, 26, 0, 196607, 26, 0, 131072, 26, 0, 131073, 26, 0, 131074, 26, 0, 131075, 26, 0, 131076, 26, 0, 131077, 26, 0, 131078, 26, 0, 131079, 26, 0, 131080, 26, 0, 131081, 26, 0, 131082, 26, 0, 131083, 26, 0, 131084, 26, 0, 131085, 26, 0, 131086, 26, 0, 131087, 26, 0, 262128, 26, 0, 262129, 26, 0, 262130, 26, 0, 262131, 26, 0, 262132, 26, 0, 262133, 26, 0, 262134, 26, 0, 262135, 26, 0, 262136, 26, 0, 262137, 26, 0, 262138, 26, 0, 262139, 26, 0, 262140, 26, 0, 262141, 26, 0, 262142, 26, 0, 262143, 26, 0, 196608, 26, 0, 196609, 26, 0, 196610, 26, 0, 196611, 26, 0, 196612, 26, 0, 196613, 26, 0, 196614, 26, 0, 196615, 26, 0, 196616, 26, 0, 196617, 26, 0, 196618, 26, 0, 196619, 26, 0, 196620, 26, 0, 196621, 26, 0, 196622, 26, 0, 196623, 26, 0, 327664, 26, 0, 327665, 26, 0, 327666, 26, 0, 327667, 26, 0, 327668, 26, 0, 327669, 26, 0, 327670, 26, 0, 327671, 26, 0, 327672, 26, 0, 327673, 26, 0, 327674, 26, 0, 327675, 26, 0, 327676, 26, 0, 327677, 26, 0, 327678, 26, 0, 327679, 26, 0, 262144, 26, 0, 262145, 26, 0, 262146, 26, 0, 262147, 26, 0, 262148, 26, 0, 262149, 26, 0, 262150, 26, 0, 262151, 26, 0, 262152, 26, 0, 262153, 26, 0, 262154, 26, 0, 262155, 26, 0, 262156, 26, 0, 262157, 26, 0, 262158, 26, 0, 262159, 26, 0, 393200, 26, 0, 393201, 26, 0, 393202, 26, 0, 393203, 26, 0, 393204, 26, 0, 393205, 26, 0, 393206, 26, 0, 393207, 26, 0, 393208, 26, 0, 393209, 26, 0, 393210, 26, 0, 393211, 26, 0, 393212, 26, 0, 393213, 26, 0, 393214, 26, 0, 393215, 26, 0, 327680, 26, 0, 327681, 26, 0, 327682, 26, 0, 327683, 26, 0, 327684, 26, 0, 327685, 26, 0, 327686, 26, 0, 327687, 26, 0, 327688, 26, 0, 327689, 26, 0, 327690, 26, 0, 327691, 26, 0, 327692, 26, 0, 327693, 26, 0, 327694, 26, 0, 327695, 26, 0, 458736, 26, 0, 458737, 26, 0, 458738, 26, 0, 458739, 26, 0, 458740, 26, 0, 458741, 26, 0, 458742, 26, 0, 458743, 26, 0, 458744, 26, 0, 458745, 26, 0, 458746, 26, 0, 458747, 26, 0, 458748, 26, 0, 458749, 26, 0, 458750, 26, 0, 458751, 26, 0, 393216, 26, 0, 393217, 26, 0, 393218, 26, 0, 393219, 26, 0, 393220, 26, 0, 393221, 26, 0, 393222, 26, 0, 393223, 26, 0, 393224, 26, 0, 393225, 26, 0, 393226, 26, 0, 393227, 26, 0, 393228, 26, 0, 393229, 26, 0, 393230, 26, 0, 393231, 26, 0, 524272, 26, 0, 524273, 26, 0, 524274, 26, 0, 524275, 26, 0, 524276, 26, 0, 524277, 26, 0, 524278, 26, 0, 524279, 26, 0, 524280, 26, 0, 524281, 26, 0, 524282, 26, 0, 524283, 26, 0, 524284, 26, 0, 524285, 26, 0, 524286, 26, 0, 524287, 26, 0, 458752, 26, 0, 458753, 26, 0, 458754, 26, 0, 458755, 26, 0, 458756, 26, 0, 458757, 26, 0, 458758, 26, 0, 458759, 26, 0, 458760, 26, 0, 458761, 26, 0, 458762, 26, 0, 458763, 26, 0, 458764, 26, 0, 458765, 26, 0, 458766, 26, 0, 458767, 26, 0 )

[node name="Walls" parent="." index="1"]
tile_data = PoolIntArray( -458768, 7, 0, -458767, 3, 0, -458766, 8, 0, -458765, 7, 0, -458764, 3, 0, -458763, 8, 0, -458762, 7, 0, -458761, 3, 0, -458760, 8, 0, -458759, 7, 0, -458758, 3, 0, -458757, 8, 0, -458756, 7, 0, -458755, 3, 0, -524286, 3, 0, -524285, 8, 0, -524284, 7, 0, -524283, 3, 0, -524282, 8, 0, -524281, 7, 0, -524280, 3, 0, -524279, 8, 0, -524278, 7, 0, -524277, 3, 0, -524276, 8, 0, -524275, 7, 0, -524274, 3, 0, -524273, 8, 0, -393232, 5, 0, -393230, 4, 0, -393229, 5, 0, -393227, 4, 0, -393226, 5, 0, -393224, 4, 0, -393223, 5, 0, -393221, 4, 0, -393220, 5, 0, -458749, 4, 0, -458748, 5, 0, -458746, 4, 0, -458745, 5, 0, -458743, 4, 0, -458742, 5, 0, -458740, 4, 0, -458739, 5, 0, -458737, 4, 0, -327696, 5, 0, -327694, 4, 0, -327693, 5, 0, -327691, 4, 0, -327690, 5, 0, -327688, 4, 0, -327687, 5, 0, -327685, 4, 0, -327684, 5, 0, -393213, 4, 0, -393212, 5, 0, -393210, 4, 0, -393209, 5, 0, -393207, 4, 0, -393206, 5, 0, -393204, 4, 0, -393203, 5, 0, -393201, 4, 0, -262160, 5, 0, -262158, 4, 0, -262157, 5, 0, -262155, 4, 0, -262154, 5, 0, -262152, 4, 0, -262151, 5, 0, -262149, 4, 0, -262148, 5, 0, -327677, 4, 0, -327676, 5, 0, -327674, 4, 0, -327673, 5, 0, -327671, 4, 0, -327670, 5, 0, -327668, 4, 0, -327667, 5, 0, -327665, 4, 0, -196624, 5, 0, -196622, 4, 0, -196621, 5, 0, -196619, 4, 0, -196618, 5, 0, -196616, 4, 0, -196615, 5, 0, -196613, 4, 0, -196612, 5, 0, -262141, 4, 0, -262140, 5, 0, -262138, 4, 0, -262137, 5, 0, -262135, 4, 0, -262134, 5, 0, -262132, 4, 0, -262131, 5, 0, -262129, 4, 0, -131088, 5, 0, -131086, 4, 0, -131085, 5, 0, -131083, 4, 0, -131082, 5, 0, -131080, 4, 0, -131079, 5, 0, -131077, 4, 0, -131076, 5, 0, -196605, 4, 0, -196604, 5, 0, -196602, 4, 0, -196601, 5, 0, -196599, 4, 0, -196598, 5, 0, -196596, 4, 0, -196595, 5, 0, -196593, 4, 0, -65550, 21, 0, -65549, 22, 0, -65547, 21, 0, -65546, 22, 0, -65544, 21, 0, -65543, 22, 0, -65541, 21, 0, -65540, 22, 0, -131069, 21, 0, -131068, 22, 0, -131066, 21, 0, -131065, 22, 0, -131063, 21, 0, -131062, 22, 0, -131060, 21, 0, -131059, 22, 0, 131058, 19, 0, 131059, 20, 0, 131061, 19, 0, 131062, 20, 0, 131064, 19, 0, 131065, 20, 0, 131067, 19, 0, 131068, 20, 0, 65539, 19, 0, 65540, 20, 0, 65542, 19, 0, 65543, 20, 0, 65545, 19, 0, 65546, 20, 0, 65548, 19, 0, 65549, 20, 0, 196592, 5, 0, 196594, 4, 0, 196595, 5, 0, 196597, 4, 0, 196598, 5, 0, 196600, 4, 0, 196601, 5, 0, 196603, 4, 0, 196604, 5, 0, 131075, 4, 0, 131076, 5, 0, 131078, 4, 0, 131079, 5, 0, 131081, 4, 0, 131082, 5, 0, 131084, 4, 0, 131085, 5, 0, 131087, 4, 0, 262128, 5, 0, 262130, 4, 0, 262131, 5, 0, 262133, 4, 0, 262134, 5, 0, 262136, 4, 0, 262137, 5, 0, 262139, 4, 0, 262140, 5, 0, 196611, 4, 0, 196612, 5, 0, 196614, 4, 0, 196615, 5, 0, 196617, 4, 0, 196618, 5, 0, 196620, 4, 0, 196621, 5, 0, 196623, 4, 0, 327664, 5, 0, 327666, 4, 0, 327667, 5, 0, 327669, 4, 0, 327670, 5, 0, 327672, 4, 0, 327673, 5, 0, 327675, 4, 0, 327676, 5, 0, 262147, 4, 0, 262148, 5, 0, 262150, 4, 0, 262151, 5, 0, 262153, 4, 0, 262154, 5, 0, 262156, 4, 0, 262157, 5, 0, 262159, 4, 0, 393200, 5, 0, 393202, 4, 0, 393203, 5, 0, 393205, 4, 0, 393206, 5, 0, 393208, 4, 0, 393209, 5, 0, 393211, 4, 0, 393212, 5, 0, 327683, 4, 0, 327684, 5, 0, 327686, 4, 0, 327687, 5, 0, 327689, 4, 0, 327690, 5, 0, 327692, 4, 0, 327693, 5, 0, 327695, 4, 0, 458736, 5, 0, 458738, 4, 0, 458739, 5, 0, 458741, 4, 0, 458742, 5, 0, 458744, 4, 0, 458745, 5, 0, 458747, 4, 0, 458748, 5, 0, 393219, 4, 0, 393220, 5, 0, 393222, 4, 0, 393223, 5, 0, 393225, 4, 0, 393226, 5, 0, 393228, 4, 0, 393229, 5, 0, 393231, 4, 0, 524272, 9, 0, 524273, 6, 0, 524274, 10, 0, 524275, 9, 0, 524276, 6, 0, 524277, 10, 0, 524278, 9, 0, 524279, 6, 0, 524280, 10, 0, 524281, 9, 0, 524282, 6, 0, 524283, 10, 0, 524284, 9, 0, 524285, 6, 0, 458754, 6, 0, 458755, 10, 0, 458756, 9, 0, 458757, 6, 0, 458758, 10, 0, 458759, 9, 0, 458760, 6, 0, 458761, 10, 0, 458762, 9, 0, 458763, 6, 0, 458764, 10, 0, 458765, 9, 0, 458766, 6, 0, 458767, 10, 0 )

[node name="SmallDrone" parent="Enemies" index="0" instance=ExtResource( 4 )]
position = Vector2( 88, -112 )

[node name="SmallDrone2" parent="Enemies" index="1" instance=ExtResource( 4 )]
position = Vector2( 88, -96 )

[node name="SmallDrone3" parent="Enemies" index="2" instance=ExtResource( 4 )]
position = Vector2( 88, -80 )

[node name="SmallDrone10" parent="Enemies" index="3" instance=ExtResource( 4 )]
position = Vector2( 136, -112 )

[node name="SmallDrone9" parent="Enemies" index="4" instance=ExtResource( 4 )]
position = Vector2( 136, -96 )

[node name="SmallDrone8" parent="Enemies" index="5" instance=ExtResource( 4 )]
position = Vector2( 136, -80 )

[node name="SmallDrone15" parent="Enemies" index="6" instance=ExtResource( 4 )]
position = Vector2( 184, -112 )

[node name="SmallDrone14" parent="Enemies" index="7" instance=ExtResource( 4 )]
position = Vector2( 184, -96 )

[node name="SmallDrone13" parent="Enemies" index="8" instance=ExtResource( 4 )]
position = Vector2( 184, -80 )

[node name="SmallDrone20" parent="Enemies" index="9" instance=ExtResource( 4 )]
position = Vector2( 232, -112 )

[node name="SmallDrone19" parent="Enemies" index="10" instance=ExtResource( 4 )]
position = Vector2( 232, -96 )

[node name="SmallDrone18" parent="Enemies" index="11" instance=ExtResource( 4 )]
position = Vector2( 232, -80 )

[node name="SmallDrone23" parent="Enemies" index="12" instance=ExtResource( 4 )]
position = Vector2( 232, 80 )

[node name="SmallDrone22" parent="Enemies" index="13" instance=ExtResource( 4 )]
position = Vector2( 232, 96 )

[node name="SmallDrone21" parent="Enemies" index="14" instance=ExtResource( 4 )]
position = Vector2( 232, 112 )

[node name="SmallDrone28" parent="Enemies" index="15" instance=ExtResource( 4 )]
position = Vector2( 184, 80 )

[node name="SmallDrone27" parent="Enemies" index="16" instance=ExtResource( 4 )]
position = Vector2( 184, 96 )

[node name="SmallDrone26" parent="Enemies" index="17" instance=ExtResource( 4 )]
position = Vector2( 184, 112 )

[node name="SmallDrone33" parent="Enemies" index="18" instance=ExtResource( 4 )]
position = Vector2( 136, 80 )

[node name="SmallDrone32" parent="Enemies" index="19" instance=ExtResource( 4 )]
position = Vector2( 136, 96 )

[node name="SmallDrone31" parent="Enemies" index="20" instance=ExtResource( 4 )]
position = Vector2( 136, 112 )

[node name="SmallDrone38" parent="Enemies" index="21" instance=ExtResource( 4 )]
position = Vector2( 88, 80 )

[node name="SmallDrone37" parent="Enemies" index="22" instance=ExtResource( 4 )]
position = Vector2( 88, 96 )

[node name="SmallDrone36" parent="Enemies" index="23" instance=ExtResource( 4 )]
position = Vector2( 88, 112 )

[node name="SmallDrone43" parent="Enemies" index="24" instance=ExtResource( 4 )]
position = Vector2( -88, 80 )

[node name="SmallDrone42" parent="Enemies" index="25" instance=ExtResource( 4 )]
position = Vector2( -88, 96 )

[node name="SmallDrone41" parent="Enemies" index="26" instance=ExtResource( 4 )]
position = Vector2( -88, 112 )

[node name="SmallDrone48" parent="Enemies" index="27" instance=ExtResource( 4 )]
position = Vector2( -136, 80 )

[node name="SmallDrone47" parent="Enemies" index="28" instance=ExtResource( 4 )]
position = Vector2( -136, 96 )

[node name="SmallDrone46" parent="Enemies" index="29" instance=ExtResource( 4 )]
position = Vector2( -136, 112 )

[node name="SmallDrone53" parent="Enemies" index="30" instance=ExtResource( 4 )]
position = Vector2( -184, 80 )

[node name="SmallDrone52" parent="Enemies" index="31" instance=ExtResource( 4 )]
position = Vector2( -184, 96 )

[node name="SmallDrone51" parent="Enemies" index="32" instance=ExtResource( 4 )]
position = Vector2( -184, 112 )

[node name="SmallDrone58" parent="Enemies" index="33" instance=ExtResource( 4 )]
position = Vector2( -232, 80 )

[node name="SmallDrone57" parent="Enemies" index="34" instance=ExtResource( 4 )]
position = Vector2( -232, 96 )

[node name="SmallDrone56" parent="Enemies" index="35" instance=ExtResource( 4 )]
position = Vector2( -232, 112 )

[node name="SmallDrone65" parent="Enemies" index="36" instance=ExtResource( 4 )]
position = Vector2( -232, -112 )

[node name="SmallDrone64" parent="Enemies" index="37" instance=ExtResource( 4 )]
position = Vector2( -232, -96 )

[node name="SmallDrone63" parent="Enemies" index="38" instance=ExtResource( 4 )]
position = Vector2( -232, -80 )

[node name="SmallDrone70" parent="Enemies" index="39" instance=ExtResource( 4 )]
position = Vector2( -184, -112 )

[node name="SmallDrone69" parent="Enemies" index="40" instance=ExtResource( 4 )]
position = Vector2( -184, -96 )

[node name="SmallDrone68" parent="Enemies" index="41" instance=ExtResource( 4 )]
position = Vector2( -184, -80 )

[node name="SmallDrone75" parent="Enemies" index="42" instance=ExtResource( 4 )]
position = Vector2( -136, -112 )

[node name="SmallDrone74" parent="Enemies" index="43" instance=ExtResource( 4 )]
position = Vector2( -136, -96 )

[node name="SmallDrone73" parent="Enemies" index="44" instance=ExtResource( 4 )]
position = Vector2( -136, -80 )

[node name="SmallDrone80" parent="Enemies" index="45" instance=ExtResource( 4 )]
position = Vector2( -88, -112 )

[node name="SmallDrone79" parent="Enemies" index="46" instance=ExtResource( 4 )]
position = Vector2( -88, -96 )

[node name="SmallDrone78" parent="Enemies" index="47" instance=ExtResource( 4 )]
position = Vector2( -88, -80 )

[node name="RightSide" type="Node2D" parent="." index="3"]

[node name="Doors" type="Node2D" parent="RightSide" index="0"]

[node name="Door" parent="RightSide/Doors" index="0" instance=ExtResource( 2 )]
position = Vector2( 88, -32 )

[node name="Door2" parent="RightSide/Doors" index="1" instance=ExtResource( 2 )]
position = Vector2( 136, -32 )

[node name="Door3" parent="RightSide/Doors" index="2" instance=ExtResource( 2 )]
position = Vector2( 184, -32 )

[node name="Door4" parent="RightSide/Doors" index="3" instance=ExtResource( 2 )]
position = Vector2( 232, -32 )

[node name="Door5" parent="RightSide/Doors" index="4" instance=ExtResource( 2 )]
position = Vector2( 232, 32 )
rotation = 3.14159

[node name="Door6" parent="RightSide/Doors" index="5" instance=ExtResource( 2 )]
position = Vector2( 184, 32 )
rotation = 3.14159

[node name="Door7" parent="RightSide/Doors" index="6" instance=ExtResource( 2 )]
position = Vector2( 136, 32 )
rotation = 3.14159

[node name="Door8" parent="RightSide/Doors" index="7" instance=ExtResource( 2 )]
position = Vector2( 88, 32 )
rotation = 3.14159

[node name="RightButton" parent="RightSide" index="1" instance=ExtResource( 3 )]
position = Vector2( 136, 0 )
OneTimePress = true

[node name="LeftSide" type="Node2D" parent="." index="4"]
rotation = 3.14159

[node name="Doors" type="Node2D" parent="LeftSide" index="0"]

[node name="Door" parent="LeftSide/Doors" index="0" instance=ExtResource( 2 )]
position = Vector2( 88, -32 )

[node name="Door2" parent="LeftSide/Doors" index="1" instance=ExtResource( 2 )]
position = Vector2( 136, -32 )

[node name="Door3" parent="LeftSide/Doors" index="2" instance=ExtResource( 2 )]
position = Vector2( 184, -32 )

[node name="Door4" parent="LeftSide/Doors" index="3" instance=ExtResource( 2 )]
position = Vector2( 232, -32 )

[node name="Door5" parent="LeftSide/Doors" index="4" instance=ExtResource( 2 )]
position = Vector2( 232, 32 )
rotation = 3.14159

[node name="Door6" parent="LeftSide/Doors" index="5" instance=ExtResource( 2 )]
position = Vector2( 184, 32 )
rotation = 3.14159

[node name="Door7" parent="LeftSide/Doors" index="6" instance=ExtResource( 2 )]
position = Vector2( 136, 32 )
rotation = 3.14159

[node name="Door8" parent="LeftSide/Doors" index="7" instance=ExtResource( 2 )]
position = Vector2( 88, 32 )
rotation = 3.14159

[node name="LeftButton" parent="LeftSide" index="1" instance=ExtResource( 3 )]
position = Vector2( 136, 0 )
OneTimePress = true
[connection signal="Pressed" from="RightSide/RightButton" to="." method="_on_RightButton_Pressed"]
[connection signal="Pressed" from="LeftSide/LeftButton" to="." method="_on_LeftButton_Pressed"]
